<resources>
    <string name="app_name">Daily Checklist</string>

    <string name="main_name">today\'s checklist</string>
    <string name="add_name">add to checklist</string>
    <string name="edit_name">edit checklist</string>

    <string name="task_msg">YOUR TASK</string>
    <string name="date_msg">DATE</string>
    <string name="time_msg">AM/PM</string>

    <string name="ok">OK</string>
    <string name="edit">EDIT</string>
    <string name="cancel">CANCEL</string>

    <string name="sun">sun</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="wed">wed</string>
    <string name="thu">thu</string>
    <string name="fri">fri</string>
    <string name="sat">sat</string>
    <string name="error">ERROR</string>
</resources>
